Login mejorado, segundo push 18/agosto/2022

--- a/Mis_Primeros_Auxilitos/login.html
+++ b/Mis_Primeros_Auxilitos/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilosLogin.css">
-
+    <script type="javaScript.js"></script>
 
 </head>
 <body>
@@ -25,8 +25,20 @@
             <input type="password" id="contrasena" placeholder="Contraseña"></input>
             <br>
             <br>
-            <button id="btn_loguearse" href="index.html">ACEPTAR</button>
+            <button id="btn_loguearse" onclick="location.href='index.html'">ACEPTAR</button>
+            <br>
+            <br>
+            <br>
+            <text>¿No tienes cuenta?</text>
+            <button id="btn_loguearse" onclick="location.href='index.html'">registrarse</button>
+            <br>
+            <br>
+            <br>
+            <img src="/Images/Facebook.svg" onclick="location.href='index.html'">
+            <img src="/Images/Google.svg" onclick="location.href='index.html'">
+
         </div>
+
 
     </content>
 
