Tercer push 19/agosto/2022, se realiza el registro del proyecto.

--- a/Mis_Primeros_Auxilitos/index.html
+++ b/Mis_Primeros_Auxilitos/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="estilos.css">
     <!--<script src= "javaScript.js" ></script>-->
 </head>
-<body>
+<body class="body-index">
 
     <header>
 
