--- a/Mis_Primeros_Auxilitos/login.html
+++ b/Mis_Primeros_Auxilitos/login.html
@@ -30,7 +30,7 @@
             <br>
             <br>
             <text>¿No tienes cuenta?</text>
-            <button id="btn_loguearse" onclick="location.href='index.html'">registrarse</button>
+            <button id="btn_loguearse" onclick="location.href='registro.html'">registrarse</button>
             <br>
             <br>
             <br>
