--- a/Mis_Primeros_Auxilitos/registro.html
+++ b/Mis_Primeros_Auxilitos/registro.html
@@ -5,8 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
-<body>
+<body class="body-registro">
+
+
+    <form action="" method="POST" id="form">
+
+        <div class="form">
+            <h1 id="tituloRegistro">Registro</h1>
+            <div class="grupo">
+                <input type="text" name="" id="name" required><span class="barra"></span>
+                <label for="">Nombre</label>
+            </div>
+            <div class="grupo">
+                <input type="email" name="" id="name" required><span class="barra"></span>
+                <label for="">Correo</label>
+            </div>
+            <div class="grupo">
+                <input type="password" name="" id="name" required><span class="barra"></span>
+                <label for="">Contraseña</label>
+            </div>
+
+            <button id="btn_Registrar" class="submit">Registrarse</button>
+
+        </div>
+
+
+
+    </form>
+
     
 </body>
 </html>
