--- a/Mis_Primeros_Auxilitos/registro.html
+++ b/Mis_Primeros_Auxilitos/registro.html
@@ -10,9 +10,10 @@
 <body class="body-registro">
 
 
-    <form action="" method="POST" id="form">
+    <form action="" method="POST" id="formulario">
 
         <div class="form">
+            <h1 id="tituloAuxilitos">MIS PRIMEROS AUXILITOS</h1>
             <h1 id="tituloRegistro">Registro</h1>
             <div class="grupo">
                 <input type="text" name="" id="name" required><span class="barra"></span>
@@ -23,9 +24,22 @@
                 <label for="">Correo</label>
             </div>
             <div class="grupo">
+                <input type="text" name="" id="name" required><span class="barra"></span>
+                <label for="">Genero</label>
+            </div>
+            <div class="grupo">
+                <input type="date" name="" id="name" required><span class="barra"></span>
+                <label for="">Fecha de nacimiento</label>
+            </div>
+            <div class="grupo">
                 <input type="password" name="" id="name" required><span class="barra"></span>
                 <label for="">Contraseña</label>
             </div>
+            <div class="grupo">
+                <input type="password" name="" id="name" required><span class="barra"></span>
+                <label for="">Confirmar contraseña</label>
+            </div>
+            
 
             <button id="btn_Registrar" class="submit">Registrarse</button>
 
