Configuraciones con animaciones en registro y login 30/agosto/2022.

--- a/Mis_Primeros_Auxilitos/login.html
+++ b/Mis_Primeros_Auxilitos/login.html
@@ -16,7 +16,7 @@
     
 
     <content class="content_login">
-        <h1 id="titulo-Auxilitos"><img src="/Images/botiquin.png" height="50px" width="50px"> MIS PRIMEROS AUXILITOS <img src="/Images/botiquin.png" height="50px" width="50px"></h1>
+        <h1 id="titulo-Auxilitos"><img id="image_Title" src="/Images/botiquin.png" height="50px" width="50px"> MIS PRIMEROS AUXILITOS <img id="image_Title" src="/Images/botiquin.png" height="50px" width="50px"></h1>
             
             <form action="" method="POST" class="form">
                 <h1 id="titulo">Login</h1>
