Mejoras de registro y login

--- a/Mis_Primeros_Auxilitos/recuperarContrasena.html
+++ b/Mis_Primeros_Auxilitos/recuperarContrasena.html
@@ -14,8 +14,14 @@
         <form action="" method="post" class="form_recuperar_contrasena">
             <h1>MIS PRIMEROS AUXILITOS</h1>
             <h3>RECUPERAR CONTRASEÑA</h3>
-            <input id="correo_Recuperar_contrasena" type="email" required placeholder="Correo">
-            <button id="btn_recibirCodigo" class="submit">Recibir codigo</button>
+
+            <div class="grupo">
+                <input id="correo_Recuperar_contrasena" type="email" required placeholder="Correo">
+            </div>
+            <div class="grupo">
+            <button id="btn_recibirCodigo" class="submit">Recibir codigo</button>   
+            </div>
+
         </form>
 
     </div>
