--- a/Mis_Primeros_Auxilitos/recuperarContrasena.html
+++ b/Mis_Primeros_Auxilitos/recuperarContrasena.html
@@ -22,6 +22,10 @@
             <button id="btn_recibirCodigo" class="submit">Recibir codigo</button>   
             </div>
 
+            <div class="grupo"> 
+                <button id="btn_regresarALogin" onclick="location.href='login.html'">Regresar</button>
+            </div>
+
         </form>
 
     </div>
