nuevos cambios de index 12/septiembre/2022

--- a/Mis_Primeros_Auxilitos/index.html
+++ b/Mis_Primeros_Auxilitos/index.html
@@ -11,7 +11,22 @@
 </head>
 <body class="body-index">
 
-    <h1>MIS PRIMEROS AUXILITOS</h1>
+    <div class="div-padre">
+
+        <div class="titulo-hijo"><h1 id="Title-index">MIS PRIMEROS AUXILITOS</h1></div>
+        <div id="circulo"></div>
+
+    </div>
+
+    <div class="opciones">
+
+        <div class="opcion">Video 1</div>
+        <div class="opcion">Video 2</div>
+        <div class="opcion">Video 3</div>
+        <div class="opcion">Video 4</div>
+
+        
+    </div>
 
     <!-- The navigation menu -->
 <div class="navbar">
@@ -28,15 +43,11 @@
     </div>
 
     <div class="hijos-navbar">
-        <img src="/Images/menu/settings2.png" onclick="location.href='index.html'">
+        <img src="/Images/menu/settings2.png" onclick="location.href='login.html'">
     </div>
+
   </div>
 
-  <div class="opciones">
-    <div class="opcion">texto 1 con varias lineas</div>
-    <div class="opcion">texto 2</div>
-    <div class="opcion">texto 3</div>
-    <div class="opcion">texto 4</div>
-</div>
+  
 
 </body>
