--- a/Mis_Primeros_Auxilitos/index.html
+++ b/Mis_Primeros_Auxilitos/index.html
@@ -20,10 +20,10 @@
 
     <div class="opciones">
 
-        <div class="opcion">Video 1</div>
-        <div class="opcion">Video 2</div>
-        <div class="opcion">Video 3</div>
-        <div class="opcion">Video 4</div>
+        <iframe class="opcion"  width="560" height="315" src="https://www.youtube.com/embed/gufP4U6Xp8Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="opcion" width="560" height="315" src="https://www.youtube.com/embed/rKIMDP4BQMI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="opcion" width="560" height="315" src="https://www.youtube.com/embed/5mWxmgcr8KA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="opcion" width="560" height="315" src="https://www.youtube.com/embed/rXiBaLHxHKw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         
     </div>
