Mejoras en botones y se agrega nuevo html game 14/septiembre/2022

--- a/Mis_Primeros_Auxilitos/login.html
+++ b/Mis_Primeros_Auxilitos/login.html
@@ -41,8 +41,8 @@
                 </div>
 
                 <div class="grupo">
-                    <img id="img-btn-Facebook" src="/Images/Facebook.svg" onclick="location.href='index.html'">
-                    <img id="img-btn-Google" src="/Images/Google.svg" onclick="location.href='index.html'">
+                    <img class="img-btn-Facebook" src="/Images/Facebook.svg" onclick="location.href='index.html'">
+                    <img class="img-btn-Google" src="/Images/Google.svg" onclick="location.href='index.html'">
                 </div>
 
                 
