--- a/Mis_Primeros_Auxilitos/index.html
+++ b/Mis_Primeros_Auxilitos/index.html
@@ -20,18 +20,7 @@
         <div id="circulo"></div>
 
     </div>
- <!--
-    <div class="opciones">
-
-        <iframe class="opcion"  width="560" height="315" src="https://www.youtube.com/embed/gufP4U6Xp8Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe class="opcion" width="560" height="315" src="https://www.youtube.com/embed/rKIMDP4BQMI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe class="opcion" width="560" height="315" src="https://www.youtube.com/embed/5mWxmgcr8KA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe class="opcion" width="560" height="315" src="https://www.youtube.com/embed/rXiBaLHxHKw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-        
-    </div>
--->
-
+ 
 
     <section class="gallery">
 
@@ -60,7 +49,7 @@
     </div>
 
     <div class="hijos-navbar">
-        <img src="/Images/menu/challengue.png" onclick="location.href='index.html'">
+        <img src="/Images/menu/challengue.png" onclick="location.href='game.html'">
     </div>
 
     <div class="hijos-navbar">
