--- a/Mis_Primeros_Auxilitos/index.html
+++ b/Mis_Primeros_Auxilitos/index.html
@@ -17,7 +17,7 @@
     <div class="div-padre">
 
         <div class="titulo-hijo"><h1 id="Title-index">MIS PRIMEROS AUXILITOS</h1></div>
-        <div id="circulo"></div>
+        <div id="circulo"><img src="/Images/profile/profile.png"></div>
 
     </div>
  
