Se sube en el css que no se pueda seleccionar el texto, ademas tambien se modifica javaScript.js

--- a/Mis_Primeros_Auxilitos/index.html
+++ b/Mis_Primeros_Auxilitos/index.html
@@ -17,7 +17,7 @@
     <div class="div-padre">
 
         <div class="titulo-hijo"><h1 id="Title-index">MIS PRIMEROS AUXILITOS</h1></div>
-        <div id="circulo"><img src="/Images/profile/profile.png"></div>
+        <div id="circulo"><img src="Images/profile/profile.png"></div>
 
     </div>
  
@@ -45,19 +45,19 @@
     <!-- The navigation menu -->
 <div class="navbar1">
     <div class="hijos-navbar">
-        <img src="/Images/menu/home.png" onclick="location.href='index.html'">
+        <img src="Images/menu/home.png" onclick="location.href='index.html'">
     </div>
 
     <div class="hijos-navbar">
-        <img src="/Images/menu/challengue.png" onclick="location.href='game.html'">
+        <img src="Images/menu/challengue.png" onclick="location.href='game.html'">
     </div>
 
     <div class="hijos-navbar">
-        <img src="/Images/menu/microphone.png" onclick="location.href='index.html'">
+        <img src="Images/menu/microphone.png" onclick="location.href='index.html'">
     </div>
 
     <div class="hijos-navbar">
-        <img src="/Images/menu/settings2.png" onclick="location.href='login.html'">
+        <img src="Images/menu/settings2.png" onclick="location.href='login.html'">
     </div>
 
   </div>
