--- a/Mis_Primeros_Auxilitos/registro.html
+++ b/Mis_Primeros_Auxilitos/registro.html
@@ -39,8 +39,8 @@
                 <input type="password" name="" id="name" required><span class="barra"></span>
                 <label for="">Confirmar contraseña</label>
             </div>
-            <button id="btn_Registrar" class="submit">Registrarse</button>
-            <button id="btn_Regresar" onclick="location.href='login.html'">Regresar</button>    
+            <button type="submit" id="btn_Registrar" class="submit">Registrarse</button>
+            <button type="submit" id="btn_Regresar" onclick="location.href=''">Regresar</button>    
 
 
         </div>
